# iamcompact-validation-ui

./: .dockerignore  .gitignore  1_Upload_data.py  Dockerfile  README.md  pyproject.toml  requirements.txt  test_data_small.csv  test_data_small.xlsx  validation.py  validation.xlsx  vetting.xlsx  ~$available_models_regions_variables_units.xlsx
.streamlit/: config.toml
input_data/: available_models_regions_variables_units.xlsx  vetting.xlsx
pages/: 2_Validate_data.py
pages/under_development/: 3_Transfer_data_to_I2AM_PARIS.py
sandbox/: Validation.ipynb  find_aggregated_vars.ipynb
test_data/: test_data.csv  test_data2.csv  test_data_missing_col_name.csv  test_data_missing_no_year.csv  test_data_small.xlsx
ui/: 1_Upload_data.py  Dockerfile  common_elements.py  common_keys.py  common_navigation.py  excel.py  main.py  page_defs.py  page_ids.py  requirements.txt  utils.py
ui/io/: excel.py
ui/p/: IPCC_AR6_vetting.py  Pop_GDP_harmonization.py  Pop_GDP_harmonization_OLD.py  Region_mapping.py  Upload_data.py  Validation_run_and_summary.py  name_validation_pages.py
ui/pages/: 1_Upload_data.py  2_IPCC_AR6_vetting.py  2_Validate_data.py  IPCC_AR6_vetting.py  Upload_data.py
validation/: data_structure.py  vetting.py
