[project]
name = "iamcompact-vetting-ui"
version = "0.1.0"
description = "User interface for IAM results vetting in the IAM COMPACT project"
authors = [
    { name = "George Xexakis" },
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
dependencies = [
    "streamlit>=1.37.1",
    "streamlit-extras>=0.4.7",
    "watchdog>=4.0.2",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ipython>=8.26.0",
]
