[project]
name = "iamcompact-validation-ui"
version = "0.5.0"
description = "User interface for IAM results validation and vetting in the IAM COMPACT project"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" },
    { name = "George Xexakis" }
]
dependencies = [
    "streamlit>=1.45",
    "watchdog>=4.0.2",
    "pandas>=2.2.2",
    "python-calamine>=0.2.3",
    "pyam-iamc>=3.0.0",
    "iamcompact-vetting @ git+https://github.com/ciceroOslo/iamcompact-vetting.git",
    "iamcompact-nomenclature @ git+https://github.com/ciceroOslo/iamcompact-nomenclature.git",
]
readme = "README.md"
requires-python = ">= 3.13"

[dependency-groups]
dev = [
    "ipython>=8.26.0",
]
